# WorkTemplate

./: .gitignore  CMakeLists.txt  README.md  body.cmake  face.cmake
app/: CMakeLists.txt  figureskate.cpp
cmake/: cuda.cmake  demo_utils.cmake  ncnn.cmake  ncnn2trt.cmake  trt.cmake  utils.cmake
demo/: CMakeLists.txt
example/: CMakeLists.txt  cvtest.cpp  posetest.cpp
src/: AkdComm.h  Comm.cpp  Comm.h  Data.cpp
src/3rdwrap/cuda/: cudaService.cpp  cudaService.cu  cudaService.h
src/3rdwrap/trt/: trtService.cpp  trtService.h  yolov5trtservice.cpp  yolov5trtservice.h
src/example/: CMakeLists.txt  bodytest.cpp  facetest.cpp
src/fr/: frService.cpp  frService.h
src/fr/fr_arcface_ncnn/: fr_arcface_ncnn.cpp  fr_arcface_ncnn.h
src/fr/fr_arcface_trt/: fr_arcface_trt.cpp  fr_arcface_trt.h
src/interface/akdfacei/: akdFaceI.cpp  akdFaceI.h
src/lm/: lmService.cpp  lmService.h
src/lm/pose_lwopenpose_trt/: pose_lwopenpose_trt.cpp  pose_lwopenpose_trt.h
src/lm/pose_openpose_ncnn/: pose_openpose_ncnn.cpp  pose_openpose_ncnn.h
src/lm/pose_openpose_trt/: pose_openpose_trt.cpp  pose_openpose_trt.h
src/lm/pose_openpose_trt/old/: pose_openpose_trt.cpp  pose_openpose_trt.h
src/lm/pose_openpose_trt/openpose/: Array.cpp  Array.hpp  BodyPartConnector - 副本.cu  BodyPartConnector.cu  BodyPartConnector.hpp  DataTypes.h  OpenPose.cu  Point.cpp  Point.hpp  PoseNMS.cu  PoseNMS.hpp  ResizeAndMerge.cu  ResizeAndMerge.hpp  cuda.hpp  libTrtPose.cpp  libTrtPose.h  poseStruct.h
src/od/: odService.cpp  odService.h
src/od/bodydetect_yolov5_3o_trt/: bodydetect_yolov5_trt_3o.cpp  bodydetect_yolov5_trt_3o.h
src/od/bodydetect_yolov5_3o_trt/old/: common.hpp  yolov5_3o.cpp  yolov5_3o.h
src/od/bodydetect_yolov5_ncnn/: bodyDetectYolov5Ncnn.cpp  bodyDetectYolov5Ncnn.h
src/od/bodydetect_yolov5_trt/: bodydetect_yolov5_trt.cpp  bodydetect_yolov5_trt.h  common.hpp  gpu_func.h  yolov5.cpp  yolov5.h
src/od/bodydetect_yolov5_trt/old/: gpu_func.cu
src/od/bodydetect_yolov5_trt_3o/: bodydetect_yolov5_trt_3o.cpp  bodydetect_yolov5_trt_3o.h  mat_transform.hpp  yolov5.cpp  yolov5.h
src/od/facedetect_retinaface_ncnn/: facedetect_retinaface_ncnn.cpp  facedetect_retinaface_ncnn.h
src/od/facedetect_retinaface_trt/: facedetect_retinaface_trt.cpp  facedetect_retinaface_trt.h
src/od/headdetect_yolov5_trt/: common.hpp  headdetect_yolov5_trt.cpp  headdetect_yolov5_trt.h  yolov5.cpp  yolov5.h
